--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 	margin: 0 auto;
 }
 
-
 p { line-height: 1.5em; }
 
 figure { position: relative; width: 100%; padding: 0; margin: 0 0 20px 0;  }
@@ -25,7 +24,7 @@ a.icon { display: block; width: 30px; height: 30px; border: 2px solid black; fon
 .icon.email:before { content: '\f0e0'; }
 
 h1, h2 { margin-bottom: 0.3em;}
-
+dfn { font-style: normal; }
 .knowledgecard { font-size: 0.9em; }
 .knowledgecard table { border-collapse: collapse; width: 100%; font-size: inherit; }
 
