--- a/css/style.css
+++ b/css/style.css
@@ -7,31 +7,53 @@
 	margin: 0 auto;
 }
 
-p { line-height: 1.5em; }
+.sidebar { max-width: 200px; margin: 0 auto; }
 
+/* Profile picture */
 figure { position: relative; width: 100%; padding: 0; margin: 0 0 20px 0;  }
 figure img { position: absolute; top: 0; right: 0; width: 100%; height: 100%; border-radius: 50%; }
 .scalinghack { padding-bottom: 100%; }
 
+/* Social icons */
 .social { display: flex; flex-direction: row; justify-content: space-between; }
 
-a.icon { display: block; width: 30px; height: 30px; border: 2px solid black; font-family: 'FontAwesome'; position: relative; text-align: center; border-radius: 50%; color: inherit; text-decoration: none; }
+a.icon {
+	display: block;
+	width: 30px;
+	height: 30px;
+	border: 2px solid black;
+	font-family: 'FontAwesome';
+	position: relative;
+	text-align: center;
+	border-radius: 50%;
+	color: inherit;
+	text-decoration: none;
+	transition: 0.2s color ease-in, 0.2s border ease-in;
+}
 
-.icon:before { line-height: 26px; vertical-align: middle; font-size: 15px;  }
+.icon:before { line-height: 26px; vertical-align: middle; font-size: 15px; }
+
+.icon.github:hover { color: #00a0dc; border-color: #00a0dc; }
 .icon.github:before { content: '\f113'; }
+.icon.linkedin:hover { color: #00a0dc; border-color: #00a0dc; }
 .icon.linkedin:before { content: '\f0e1'; }
+.icon.googleplus:hover { color: #D73D32; border-color: #D73D32; }
 .icon.googleplus:before { content: '\f0d5'; }
+.icon.email:hover { color: #D73D32; border-color: #D73D32; }
 .icon.email:before { content: '\f0e0'; }
 
-h1, h2 { margin-bottom: 0.3em;}
-dfn { font-style: normal; }
+/* Knowledgecard */
 .knowledgecard { font-size: 0.9em; }
 .knowledgecard table { border-collapse: collapse; width: 100%; font-size: inherit; }
 .knowledgecard tr { vertical-align: top; }
-td { line-height: 1.5em; }
+.knowledgecard td { line-height: 1.5em; }
 
-.sidebar { max-width: 200px; margin: 0 auto; }
+/* Some general element styling */
+h1, h2 { margin-bottom: 0.3em;}
+p { line-height: 1.5em; }
+dfn { font-style: normal; }
 
+/* Mobile first, but let's make it pretty for larger devices */
 @media (min-width: 700px) {
 	.container { margin-top: 100px; }
 	main, .sidebar { float: left; }
