--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,32 @@
 .sidebar { max-width: 200px; margin: 0 auto; }
 
 /* Profile picture */
-figure { position: relative; width: 100%; padding: 0; margin: 0 0 20px 0;  }
-figure img { position: absolute; top: 0; right: 0; width: 100%; height: 100%; border-radius: 50%; }
+figure {
+	position: relative;
+	width: 100%;
+	padding: 0;
+	margin: 0 0 20px 0;
+}
+
+figure img {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	transition: transform 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+/* At this time I refuse to add js to this page, luckily we have some awesome css hacks. */
+input#flipimg { display: none; }
+
+figure.flip img, figure input:checked ~ img {
+	transform: rotate3d(0,1,0, 180deg);
+}
+
 .scalinghack { padding-bottom: 100%; }
+
 
 /* Social icons */
 .social { display: flex; flex-direction: row; justify-content: space-between; }
