--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,25 @@
 	margin: 0 auto;
 }
 
-.sidebar { max-width: 200px; margin: 0 auto; }
+.sidebar { max-width: 300px; margin: 0 auto; }
 
 /* Profile picture */
 figure {
 	position: relative;
 	width: 100%;
 	padding: 0;
-	margin: 0 0 20px 0;
+	margin: 0;
 }
 
 figure img {
 	position: absolute;
-	top: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
+	top: 10%;
+	right: 10%;
+	width: 80%;
+	height: 80%;
 	border-radius: 50%;
 	transition: transform 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+	box-shadow: 1px 1px 1px #333;
 }
 
 /* At this time I refuse to add js to this page, luckily we have some awesome css hacks. */
@@ -42,8 +43,10 @@ figure.flip img, figure input:checked ~ img {
 
 a.icon {
 	display: block;
-	width: 30px;
-	height: 30px;
+	width: 40px;
+	height: 40px;
+	font-size: 20px;
+	line-height: 36px;
 	border: 2px solid black;
 	font-family: 'FontAwesome';
 	position: relative;
@@ -54,7 +57,7 @@ a.icon {
 	transition: 0.2s color ease-in, 0.2s border ease-in;
 }
 
-.icon:before { line-height: 26px; vertical-align: middle; font-size: 15px; }
+.icon:before { vertical-align: middle;  }
 
 .icon.github:hover { color: #00a0dc; border-color: #00a0dc; }
 .icon.github:before { content: '\f113'; }
@@ -80,8 +83,8 @@ dfn { font-style: normal; }
 @media (min-width: 700px) {
 	.container { margin-top: 100px; }
 	main, .sidebar { float: left; }
-	main { width: calc(90% - 200px); margin-right: 10%; }
-	.sidebar { width: 200px; }
+	main { width: calc(90% - 300px); margin-right: 10%; }
+	.sidebar { width: 300px; }
 }
 
 @media (max-width: 699px) {
